Fixed and refactored testParserNoteMutateSuccessTest() and testParserChordMutateSuccessTest()