@@ -40,7 +40,7 @@ public class MusicLanguageParserTest {
 
         MusicLanguageParser.MusicsheetContext musicSheet = program.musicsheet();
         assertEquals(8, musicSheet.children.size());
-        assertInstanceOf(MusicLanguageParser.StatementContext.class, musicSheet.children.get(0));
+        assertInstanceOf(MusicLanguageParser.StatementContext.class, musicSheet.children.getFirst());
 
         // test that the first three statements are declarations
         for (int i = 0; i < 4; i++) {
@@ -72,11 +72,14 @@ public class MusicLanguageParserTest {
         MusicLanguageParser parser = new MusicLanguageParser(tokens);
 
         MusicLanguageParser.ProgramContext program = parser.program();
-        assertEquals(4,program.children.size()); // 4 because EOF counts as a token
+        assertEquals(2, program.children.size()); // music sheet and EOF
+
+        MusicLanguageParser.MusicsheetContext musicSheet = program.musicsheet();
+        assertEquals(3, musicSheet.children.size());
 
         // test that the third statement "Add n1.key 1" is a mutation
-        MusicLanguageParser.StatementContext thirdStmt = (MusicLanguageParser.StatementContext) program.children.get(2);
-        assertInstanceOf(MusicLanguageParser.MutateContext.class, thirdStmt.children.get(0));
+        MusicLanguageParser.StatementContext thirdStmt = (MusicLanguageParser.StatementContext) musicSheet.children.get(2);
+        assertInstanceOf(MusicLanguageParser.MutateContext.class, thirdStmt.children.getFirst());
 
     }
     @Test
@@ -97,12 +100,16 @@ public class MusicLanguageParserTest {
         MusicLanguageParser parser =  new MusicLanguageParser(tokens);
 
         MusicLanguageParser.ProgramContext program = parser.program();
-        assertEquals(4, program.children.size()); // 4 because EOF counts as a token
+        assertEquals(2, program.children.size()); // music sheet and EOF
+
+        MusicLanguageParser.MusicsheetContext musicSheet = program.musicsheet();
+        assertEquals(3, musicSheet.children.size());
 
         // test that third statement "Add c1.key 1" is a mutation
-        MusicLanguageParser.StatementContext thirdStmt = (MusicLanguageParser.StatementContext) program.children.get(2);
-        assertInstanceOf(MusicLanguageParser.MutateContext.class, thirdStmt.children.get(0));
+        MusicLanguageParser.StatementContext thirdStmt = (MusicLanguageParser.StatementContext) musicSheet.children.get(2);
+        assertInstanceOf(MusicLanguageParser.MutateContext.class, thirdStmt.children.getFirst());
     }
+
     @Test
     public void testParserRepeatSuccessTest() throws IOException {
         String input = """
@@ -125,20 +132,22 @@ public class MusicLanguageParserTest {
         MusicLanguageParser.ProgramContext program = parser.program();
         assertEquals(2, program.children.size()); // 2 because Repeat is its own child and EOF count as child
 
-        // test that first statement "Repeat (5) {" is repeat
-        MusicLanguageParser.StatementContext firstStmt = (MusicLanguageParser.StatementContext) program.children.get(0);
-        assertInstanceOf(MusicLanguageParser.RepeatContext.class, firstStmt.children.get(0));
+        MusicLanguageParser.MusicsheetContext musicSheet = program.musicsheet();
+        MusicLanguageParser.StatementContext stmt = (MusicLanguageParser.StatementContext) musicSheet.children.getFirst();
 
-        // test that repeat statement has children of size 7
-        MusicLanguageParser.RepeatContext repeatStmt = (MusicLanguageParser.RepeatContext) program.children.get(0).getChild(0);
-        assertEquals(7, repeatStmt.getChildCount());
+        // test that first statement "Repeat (5) {" is repeat
+        assertInstanceOf(MusicLanguageParser.RepeatContext.class, stmt.children.getFirst());
+
+        MusicLanguageParser.RepeatContext repeatStmt = (MusicLanguageParser.RepeatContext) stmt.getChild(0);
+        // test that repeat statement has children of size 8
+        assertEquals(8, repeatStmt.getChildCount());
 
         // test that the first statement in repeat is a mutation
-        MusicLanguageParser.MusicsheetContext repeat_ms = (MusicLanguageParser.MusicsheetContext) repeatStmt.children.get(5);
-        assertInstanceOf(MusicLanguageParser.MutateContext.class, repeat_ms.children.get(0));
+        MusicLanguageParser.MusicsheetContext mutationStatement = (MusicLanguageParser.MusicsheetContext) repeatStmt.children.get(5);
+        assertInstanceOf(MusicLanguageParser.MutateContext.class, mutationStatement.children.getFirst().getChild(0));
 
         // test that the second statement in repeat is a REPEAT_DISPLAY
-//        assertInstanceOf(MusicLanguageParser.Repeat_displayContext.class, repeat_cmds.children.get(2));
+//        assertInstanceOf(MusicLanguageParser.RepeatContext.class, repeat_ms.children.get(2));
     }
     @Test
     void testParserProgramNoStatementSuccess() {
